makefs: Handle missing link keyword in mtree spec

PR:		241178
Reviewed by:	emaste
MFC after:	3 days
Pull Request:	https://github.com/freebsd/freebsd-src/pull/850